syntax = "proto3";

package user.v1;

option go_package = "api/user/v1;userv1";

import "google/protobuf/timestamp.proto";
import "user/v1/enums/user_role.proto";


message User {
  int64 id = 1;
  string email = 2;
  optional string username = 3;
  UserRole role = 4;
  bool is_active = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

message UserShort {
  int64 id = 1;
  string email = 2;
  optional string username = 3;
  UserRole role = 4;
  bool is_active = 5;
}

message UpdateUser {
  string email = 1;
  string username = 2;
}

message UpdateHotelTitle {
  string title = 1;
  string hotel_slug = 2;
}