syntax = "proto3";

package user.v1;

option go_package = "api/user/v1;userv1";

import "buf/validate/validate.proto";
import "user/v1/models/user.proto";

message GetUsersRequest {
  uint64 page = 1 [
    (buf.validate.field).uint64.gte = 1
  ];
  uint64 limit = 2 [
    (buf.validate.field).uint64 = {gte: 1, lte: 100}
  ];
}

message GetUsersResponse {
  repeated UserShort users = 1;
  uint64 total_count = 2;
  uint64 page = 3;
  uint64 limit = 4;
}